[gd_scene load_steps=9 format=3 uid="uid://bsrydvmplh26r"]

[ext_resource type="Script" uid="uid://dp5hq27jtdwr" path="res://Minions/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://hhagkp563ya4" path="res://Art/Circle 32.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d1t02xo87btlr" path="res://Art/Player/Ship.png" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 11.1803

[sub_resource type="Curve" id="Curve_e80uo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tok1r"]
curve = SubResource("Curve_e80uo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tdg3f"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 5.0
initial_velocity_min = 64.0
initial_velocity_max = 64.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 0.4
scale_curve = SubResource("CurveTexture_tok1r")

[sub_resource type="CircleShape2D" id="CircleShape2D_o82eu"]
radius = 84.006

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kpjcp")

[node name="Art Pivot" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 3

[node name="Trails" type="Node2D" parent="Art Pivot"]
unique_name_in_owner = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="Art Pivot/Trails"]
unique_name_in_owner = true
position = Vector2(-15, -12)
amount = 16
texture = ExtResource("2")
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_tdg3f")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Art Pivot/Trails"]
unique_name_in_owner = true
position = Vector2(-15, 12)
amount = 16
texture = ExtResource("2")
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_tdg3f")

[node name="Ship Art" type="Sprite2D" parent="Art Pivot"]
unique_name_in_owner = true
modulate = Color(0.443137, 0.443137, 0.45098, 1)
z_index = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")

[node name="Shoot Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SuckUpArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuckUpArea2D"]
shape = SubResource("CircleShape2D_o82eu")

[connection signal="timeout" from="Shoot Timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="SuckUpArea2D" to="." method="_on_suck_up_area_2d_area_entered"]
